# mp2-practice

PetrovND/04_lab/: CMakeLists.txt
PetrovND/04_lab/lib_parser/include/: parser.h
PetrovND/04_lab/lib_parser/src/: CMakeLists.txt  parser.cpp
PetrovND/04_lab/lib_tlist/include/: data.h  headRingList.h  list.h  node.h
PetrovND/04_lab/lib_tlist/src/: CMakeLists.txt
PetrovND/04_lab/lib_tpolynom/include/: monom.h  polynom.h
PetrovND/04_lab/lib_tpolynom/src/: CMakeLists.txt  monom.cpp  polynom.cpp
PetrovND/04_lab/samples/: CMakeLists.txt  sample_list.cpp  sample_polynom.cpp
PetrovND/04_lab/tests/: CMakeLists.txt  test_list.cpp  test_polynom.cpp
